Metabolites facet now works better
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1108 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/hibernate.properties.template
+++ b/metabolights-webapps/src/main/resources/hibernate.properties.template
@@ -6,6 +6,8 @@ hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.search.default.indexBase=C:\MTBL\xxxx\Lucene\
 
+#Your local mail server
+mailServer=localhost
 
 # Only used for local connections, not by EBI server deployment
 jdbc.initialPoolSize=2
