--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -197,8 +197,7 @@
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>import_layer_MTBLS</artifactId>
-            <version>1.3.2.29-P-SNAPSHOT</version>
-            <!--version>1.3.2.32-SNAPSHOT</version-->
+            <version>1.3.2.32-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
             <exclusions>
