--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -11,14 +11,18 @@
         "tabs": [{
                 "selected": false,
                 "title": "Home",
-                "href": "home",
+                "href": "index",
                 "tooltip": "Home page"
+			},{
+                "selected": false,
+                "title": "Browse",
+                "href": "browse",
+                "tooltip": "Browse"
             },{
                 "selected": false,
                 "title": "Reference layer",
                 "href": "RefLayerSearch",
                 "tooltip": "Reference layer"
-
             },{
                 "selected": false,
                 "title": "Download",
@@ -26,9 +30,14 @@
                 "tooltip": "Download"
             },{
                 "selected": false,
-                "title": "Help",
+                "title": "How to use",
                 "href": "submitHelp",
                 "tooltip": "Help"
+            },{
+                "selected": false,
+                "title": "About MetaboLights",
+                "href": "about",
+                "tooltip": "About MetaboLigths"
             }
         ]
     },
@@ -37,7 +46,7 @@
         "title": "MetaboLights",
         "cssType": "fluid",
         "javascriptList": ["javascript/jquery-1.8.2.js",
-        					"jquery-ui-1.9.0.custom.min.js"],
+        					"javascript/jquery-ui-1.9.0.custom.min.js"],
         "cssList": ["cssrl/jquery-ui-1.9.0.custom.min.css",
         			"cssrl/iconfont/font_style.css",
         			"http://wwwdev.ebi.ac.uk/web_guidelines/css/compliance/develop/embl-petrol-colours.css",
