Adapt al request mapped by Login controller to frontier L&F https://www.pivotaltracker.com/story/show/34509737
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1110 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -38,6 +38,16 @@
                 "title": "About MetaboLights",
                 "href": "about",
                 "tooltip": "About MetaboLigths"
+             },{
+                "selected": false,
+                "title": "Log in",
+                "href": "login",
+                "tooltip": "Log in to MetaboLights"
+             },{
+                "selected": false,
+                "title": "Submit",
+                "href": "presubmit",
+                "tooltip": "Submit data to MetaboLights"
             }
         ]
     },
