Account controller + associated jsp redesigned. EBI icons Sprited and used in download login and others.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1118 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -60,6 +60,7 @@
         "cssList": ["cssrl/jquery-ui-1.9.0.custom.min.css",
         			"cssrl/iconfont/font_style.css",
         			"http://wwwdev.ebi.ac.uk/web_guidelines/css/compliance/develop/embl-petrol-colours.css",
-        			"cssrl/reflayer.css"]
+        			"cssrl/reflayer.css",
+        			"cssrl/icons.css"]
     }
 }
