--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -237,6 +237,20 @@
         	<artifactId>pride-web-utils</artifactId>
         	<version>1.0-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>uk.ac.ebi.rhea</groupId>
+			<artifactId>rhea-ws-domain</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>uk.ac.ebi.rhea</groupId>
+			<artifactId>rhea-ws-client</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>uk.ac.ebi.rhea</groupId>
+			<artifactId>rhea-domain</artifactId>
+			<version>1.7.0</version>
+		</dependency>
     </dependencies>
-
 </project>
