--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -4,9 +4,9 @@
         "title": "MetaboLights",
         "search": {
             "btnText": "Search",
-            "action": "RefLayerSearch",
+            "action": "search",
             "method": "post",
-            "inputName": "query"
+            "inputName": "freeTextQuery"
         },
         "tabs": [{
                 "selected": false,
@@ -56,7 +56,8 @@
         "title": "MetaboLights",
         "cssType": "fluid",
         "javascriptList": ["javascript/jquery-1.8.2.js",
-        					"javascript/jquery-ui-1.9.0.custom.min.js"],
+        					"javascript/jquery-ui-1.9.0.custom.min.js",
+        					"javascript/menu.js"],
         "cssList": ["cssrl/jquery-ui-1.9.0.custom.min.css",
         			"cssrl/iconfont/font_style.css",
         			"http://wwwdev.ebi.ac.uk/web_guidelines/css/compliance/develop/embl-petrol-colours.css",
