--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -252,5 +252,10 @@
 			<artifactId>rhea-domain</artifactId>
 			<version>1.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>uk.ac.ebi.biobabel</groupId>
+			<artifactId>biobabel-citations</artifactId>
+			<version>2.0.1</version>
+		</dependency>
     </dependencies>
 </project>
