Terms and conditions acceptance in create account form.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1141 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -30,7 +30,7 @@
                 "tooltip": "Download"
             },{
                 "selected": false,
-                "title": "How to use",
+                "title": "Help",
                 "href": "submitHelp",
                 "tooltip": "Help"
             },{
