Updates for the Import module. Enable MYSQL usage Exists method
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1158 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/referencelayer/dao/src/test/resources/metabolightsDEV.properties
+++ b/referencelayer/dao/src/test/resources/metabolightsDEV.properties
@@ -1,6 +1,6 @@
 host:izarra.ebi.ac.uk
 port:1561
-user:isatab
-password:isatab
+user:USER
+password:PSW
 driver:oracle.jdbc.driver.OracleDriver
 instance:MTADEV
