--- a/referencelayer/dao/pom.xml
+++ b/referencelayer/dao/pom.xml
@@ -4,7 +4,7 @@
     
     <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
     <artifactId>dao</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2-SNAPSHOT</version>
     <name>Reference layer data access object</name>
 
     <parent>
@@ -16,7 +16,7 @@
 	<build>
 		<testResources>
 			<testResource>
-				<directory>src/main/resources</directory>
+				<directory>src/test/resources</directory>
 			</testResource>
 		</testResources>
 		<plugins>
@@ -113,5 +113,11 @@
    			<artifactId>ojdbc6</artifactId>
    			<version>11.2.0.3.0</version>
    		</dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.15</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
