Follow new colour schema... Minor fixes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1174 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -2,11 +2,10 @@
     "localMasthead": {
         "title": "MetaboLights",
         "style": "logo-title",
-        "strapline":"A database for Metabolomics experiments and derived information",
         "homepageUrl": "index",
         "logo": {
-            "src": "img/logo.png",
-            "alt": "MetaboLights logo",
+            "src": "img/MetaboLightsV3.png",
+            "alt": "MetaboLights",
             "width": "64",
             "height": "64"
         },
