Refactor: Take values from the ebieye entry based on field names. New logo
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1182 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -4,7 +4,7 @@
         "style": "logo-title",
         "homepageUrl": "index",
         "logo": {
-            "src": "img/MetaboLightsV3.png",
+            "src": "img/MetaboLightsLogo.png",
             "alt": "MetaboLights",
             "width": "64",
             "height": "64"
