Submithelp is now "help", downloadplugin is now "download"
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1217 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -37,7 +37,7 @@
             {
                 "selected": false,
                 "title": "Help",
-                "href": "submitHelp",
+                "href": "help",
                 "tooltip": "Help"
             },
             {
