Change color again! Home page title alignment Contact us navigation item Icons changed (for Download studies and download software) Alternative rows colour changed (to a grey-ish).
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1221 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -45,7 +45,14 @@
                 "title": "About MetaboLights",
                 "href": "about",
                 "tooltip": "About MetaboLights"
+            },
+            {
+                "selected": false,
+                "title": "Contact",
+                "href": "contact",
+                "tooltip": "Contact us"
             }
+
         ],
         "functionalTabs": [
             {
