Cleaned up uppercase calls to jsp, like Reactions and Citations
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1226 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -25,7 +25,7 @@
             {
                 "selected": false,
                 "title": "Reference layer",
-                "href": "RefLayerSearch",
+                "href": "refLayerSearch",
                 "tooltip": "Reference layer"
             },
             {
