Moved mailserver property from hibernate to context file as a JNDI property.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1250 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/hibernate.properties.template
+++ b/metabolights-webapps/src/main/resources/hibernate.properties.template
@@ -7,7 +7,8 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.search.default.indexBase=C:\MTBL\xxxx\Lucene\
 
 #Your local mail server
-mailServer=localhost
+#mailServer=localhost
+#mailServer=mailsrv
 
 # Only used for local connections, not by EBI server deployment
 jdbc.initialPoolSize=2
