Do not clean process folder inside uploadToBii method (bug of file not found when validation was incorrect). Accept any investigation file name pattern: i_.*\.txt
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1267 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/application.properties
+++ b/metabolights-webapps/src/main/resources/application.properties
@@ -4,7 +4,7 @@ replyTo=no-reply@ebi.ac.uk
 
 # Settings for ISAtab load/replacement.  Should not change this
 isatab.ids=Study Identifier;Investigation Identifier
-isatab.filewithids=i_Investigation.txt
+isatab.filewithids=i_.*\.txt
 isatab.publicReleaseDate=Study Public Release Date
 isatab.studySubDate=Study Submission Date
 isatab.profilingType=Study Assay Measurement Type
