--- a/referencelayer/importer/pom.xml
+++ b/referencelayer/importer/pom.xml
@@ -98,15 +98,10 @@
 		</plugins>
 	</build>
     <dependencies>
-	    <dependency>
-	    	<groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
-	    	<artifactId>domain</artifactId>
-	    	<version>0.2-SNAPSHOT</version>
-	    </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
             <artifactId>dao</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>0.4-SNAPSHOT</version>
         </dependency>
    		<dependency>
 			<groupId>uk.ac.ebi.biobabel</groupId>
@@ -116,7 +111,12 @@
         <dependency>
             <groupId>uk.ac.ebi.chebi.webapps.chebiWS.client</groupId>
             <artifactId>chebiWS-client</artifactId>
-            <version>2.0</version>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.rhea</groupId>
+            <artifactId>rhea-ws-client</artifactId>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 </project>
