--- a/referencelayer/importer/src/test/resources/metabolightsMYSQL.properties
+++ b/referencelayer/importer/src/test/resources/metabolightsMYSQL.properties
@@ -1,6 +1,6 @@
 host:localhost
 port:3306
-user:xxx
-password:xxx
+user:isatab
+password:isatab
 driver:com.mysql.jdbc.Driver
 instance:metabolights
