--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -225,7 +225,7 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
             <artifactId>dao</artifactId>
-            <version>0.4-SNAPSHOT</version>
+            <version>0.5-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <artifactId>ojdbc6</artifactId>
@@ -258,5 +258,10 @@
 			<artifactId>biobabel-citations</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>12.0</version>
+        </dependency>
     </dependencies>
 </project>
