--- a/referencelayer/BMLNMRtoMetaboLights/pom.xml
+++ b/referencelayer/BMLNMRtoMetaboLights/pom.xml
@@ -8,9 +8,26 @@
     <artifactId>BMLNMRtoMetaboLights</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
+        <artifactId>referencelayer</artifactId>
+        <version>0.2</version>
+    </parent>
+
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <configuration>
+                            <classifier>deps</classifier>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
@@ -24,7 +41,17 @@
                     </archive>
                     <finalName>${project.artifactId}-${project.version}-deps</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
+                    <classifier>deps</classifier>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!--  bind to the packaging phase -->
+                        <goals>
+                            <goal>assembly</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
