--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -233,11 +233,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-       <dependency>
-        	<groupId>uk.ac.ebi.pride.web</groupId>
-        	<artifactId>pride-web-utils</artifactId>
-        	<version>1.0-SNAPSHOT</version>
-        </dependency>
 		<dependency>
 			<groupId>uk.ac.ebi.rhea</groupId>
 			<artifactId>rhea-ws-domain</artifactId>
@@ -263,5 +258,10 @@
             <artifactId>guava</artifactId>
             <version>12.0</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>uk.ac.ebi.pride.web</groupId>-->
+            <!--<artifactId>pride-web-utils</artifactId>-->
+            <!--<version>1.2</version>-->
+        <!--</dependency>-->
     </dependencies>
 </project>
